fix contrast error

--- a/style/style.css
+++ b/style/style.css
@@ -17,6 +17,7 @@
     top: auto;
     width: 1px;
     height: 1px;
+    color: #000;
     overflow: hidden;
 }
 
